--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@kingsworld/plugin-cron",
-    "version": "1.0.0",
+    "description": "A simple @sapphire/framework plugin that aims to make use of the cron package and allow users to make cron jobs within their Sapphire discord bot.",
+    "version": "1.0.1",
     "author": "Seren_Modz 21 <seren@kings-world.net>",
     "license": "MIT",
     "main": "dist/index.js",
