--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@kingsworld/plugin-cron",
     "description": "A simple @sapphire/framework plugin that aims to make use of the cron package and allow users to make cron jobs within their Sapphire discord bot.",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "author": "Seren_Modz 21 <seren@kings-world.net>",
     "license": "MIT",
     "main": "dist/index.js",
@@ -28,8 +28,7 @@
         "build": "tsc && yarn esm:register && yarn esm:default",
         "clean:build": "rimraf dist && yarn build",
         "esm:register": "gen-esm-wrapper dist/register.js dist/register.mjs",
-        "esm:default": "gen-esm-wrapper dist/index.js dist/index.mjs",
-        "postinstall": "is-ci || husky install"
+        "esm:default": "gen-esm-wrapper dist/index.js dist/index.mjs"
     },
     "dependencies": {
         "cron": "^2.3.1",
@@ -42,12 +41,10 @@
         "@sapphire/pieces": "^3.6.3",
         "@sapphire/ts-config": "^4.0.0",
         "@types/cron": "^2",
-        "@types/is-ci": "^3",
         "@types/node": "^20.4.2",
         "discord.js": "^14.11.0",
         "gen-esm-wrapper": "^1.1.3",
         "husky": "^8.0.3",
-        "is-ci": "^3.0.1",
         "prettier": "^2.8.8",
         "pretty-quick": "^3.1.3",
         "typescript": "^5.1.6"
