--- a/package.json
+++ b/package.json
@@ -1,38 +1,17 @@
 {
-    "name": "@kingsworld/plugin-cron",
-    "description": "A simple @sapphire/framework plugin that aims to make use of the cron package and allow users to make cron jobs within their Sapphire discord bot.",
-    "version": "1.0.2",
+    "name": "@kingsworld/sapphire-plugins",
     "author": "Seren_Modz 21 <seren@kings-world.net>",
+    "repository": "github://Kings-World/sapphire-plugins",
     "license": "MIT",
-    "main": "dist/index.js",
-    "module": "dist/index.mjs",
-    "types": "dist/index.d.ts",
-    "exports": {
-        ".": {
-            "import": "./dist/index.mjs",
-            "require": "./dist/index.js",
-            "types": "./dist/index.d.ts"
-        },
-        "./register": {
-            "import": "./register.mjs",
-            "require": "./register.js",
-            "types": "./register.d.ts"
-        }
-    },
-    "sideEffects": [
-        "./dist/register.js",
-        "./register.js",
-        "./register.mjs"
+    "private": true,
+    "workspaces": [
+        "packages/*"
     ],
     "scripts": {
-        "build": "tsc && yarn esm:register && yarn esm:default",
-        "clean:build": "rimraf dist && yarn build",
-        "esm:register": "gen-esm-wrapper dist/register.js dist/register.mjs",
-        "esm:default": "gen-esm-wrapper dist/index.js dist/index.mjs"
-    },
-    "dependencies": {
-        "cron": "^2.3.1",
-        "tslib": "^2.6.0"
+        "clean": "rimraf \"packages/**/dist\" \"packages/**/.turbo\"",
+        "build": "turbo run build",
+        "prepublishOnly": "yarn build",
+        "postinstall": "is-ci || husky install"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.6.6",
@@ -41,37 +20,22 @@
         "@sapphire/pieces": "^3.6.3",
         "@sapphire/ts-config": "^4.0.0",
         "@types/cron": "^2",
+        "@types/is-ci": "^3",
         "@types/node": "^20.4.2",
+        "cz-conventional-changelog": "^3.3.0",
         "discord.js": "^14.11.0",
         "gen-esm-wrapper": "^1.1.3",
         "husky": "^8.0.3",
+        "is-ci": "^3.0.1",
         "prettier": "^2.8.8",
         "pretty-quick": "^3.1.3",
+        "turbo": "^1.10.7",
         "typescript": "^5.1.6"
     },
-    "homepage": "https://github.com/Kings-World/cron-plugin",
-    "repository": "github://Kings-World/cron-plugin",
-    "keywords": [
-        "sapphire",
-        "plugin",
-        "cron",
-        "typescript",
-        "ts",
-        "discord",
-        "yarn",
-        "bot"
-    ],
-    "bugs": {
-        "url": "https://github.com/Kings-World/cron-plugin/issues",
-        "email": "seren@kings-world.net"
-    },
-    "files": [
-        "dist/",
-        "!dist/.tsbuildinfo",
-        "./register.*"
-    ],
-    "publishConfig": {
-        "access": "public"
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     },
     "packageManager": "yarn@3.6.1"
 }
