--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "is-ci": "^3.0.1",
         "prettier": "^2.8.8",
         "pretty-quick": "^3.1.3",
+        "rimraf": "^5.0.1",
         "turbo": "^1.10.7",
         "typescript": "^5.1.6"
     },
