--- a/packages/cron/package.json
+++ b/packages/cron/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@kingsworld/plugin-cron",
     "description": "A simple @sapphire/framework plugin that aims to make use of the cron package and allow users to make cron jobs within their Sapphire discord bot.",
-    "version": "1.0.8",
+    "version": "1.1.0",
     "author": "Seren_Modz 21 <seren@kings-world.net>",
     "license": "MIT",
     "main": "dist/index.js",
@@ -14,30 +14,27 @@
             "types": "./dist/index.d.ts"
         },
         "./register": {
-            "import": "./register.mjs",
-            "require": "./register.js",
-            "types": "./register.d.ts"
+            "import": "./dist/register.mjs",
+            "require": "./dist/register.js",
+            "types": "./dist/register.d.ts"
         }
     },
     "sideEffects": [
         "./dist/register.js",
-        "./register.js",
-        "./register.mjs"
+        "./dist/register.mjs"
     ],
     "scripts": {
         "build": "tsc && yarn esm:register && yarn esm:default",
-        "clean:build": "rimraf dist && yarn build",
         "esm:register": "gen-esm-wrapper dist/register.js dist/register.mjs",
         "esm:default": "gen-esm-wrapper dist/index.js dist/index.mjs"
     },
     "dependencies": {
-        "cron": "^2.4.0",
-        "tslib": "^2.6.1"
+        "cron": "^3.1.6"
     },
     "devDependencies": {
-        "@types/node": "^20.4.5",
+        "@types/node": "^20.9.2",
         "gen-esm-wrapper": "^1.1.3",
-        "typescript": "^5.1.6"
+        "typescript": "^5.2.2"
     },
     "homepage": "https://github.com/Kings-World/sapphire-plugins",
     "repository": {
@@ -61,10 +58,12 @@
     },
     "files": [
         "dist/",
-        "!dist/.tsbuildinfo",
-        "./register.*"
+        "!dist/.tsbuildinfo"
     ],
     "publishConfig": {
         "access": "public"
+    },
+    "engines": {
+        "node": ">=v18"
     }
 }
