--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "scripts": {
         "clean": "rimraf \"packages/**/dist\" \"packages/**/.turbo\"",
         "build": "turbo run build",
+        "typecheck": "turbo run typecheck",
         "prepublishOnly": "yarn build",
         "postinstall": "is-ci || husky install"
     },
@@ -21,12 +22,14 @@
         "@sapphire/ts-config": "^5.0.0",
         "@types/node": "^20.10.4",
         "discord.js": "^14.14.1",
-        "gen-esm-wrapper": "^1.1.3",
+        "esbuild-plugin-file-path-extensions": "^2.0.0",
+        "esbuild-plugin-version-injector": "^1.2.1",
         "husky": "^8.0.3",
         "is-ci": "^3.0.1",
         "prettier": "^2.8.8",
         "pretty-quick": "^3.1.3",
         "rimraf": "^5.0.5",
+        "tsup": "^8.0.1",
         "turbo": "^1.11.2",
         "typescript": "^5.3.3"
     },
