--- a/packages/cron/package.json
+++ b/packages/cron/package.json
@@ -1,39 +1,55 @@
 {
     "name": "@kingsworld/plugin-cron",
     "description": "A simple @sapphire/framework plugin that aims to make use of the cron package and allow users to make cron jobs within their Sapphire discord bot.",
-    "version": "1.2.0",
+    "version": "1.3.0",
     "author": "Seren_Modz 21 <seren@kings-world.net>",
     "license": "MIT",
-    "main": "dist/index.js",
-    "module": "dist/index.mjs",
-    "types": "dist/index.d.ts",
+    "main": "dist/cjs/index.cjs",
+    "module": "dist/esm/index.mjs",
+    "types": "dist/cjs/index.d.ts",
     "exports": {
         ".": {
-            "import": "./dist/index.mjs",
-            "require": "./dist/index.js",
-            "types": "./dist/index.d.ts"
+            "import": {
+                "types": "./dist/esm/index.d.mts",
+                "default": "./dist/esm/index.mjs"
+            },
+            "require": {
+                "types": "./dist/cjs/index.d.ts",
+                "default": "./dist/cjs/index.cjs"
+            }
         },
         "./register": {
-            "import": "./dist/register.mjs",
-            "require": "./dist/register.js",
-            "types": "./dist/register.d.ts"
+            "import": {
+                "types": "./dist/esm/register.d.mts",
+                "default": "./dist/esm/register.mjs"
+            },
+            "require": {
+                "types": "./dist/cjs/register.d.ts",
+                "default": "./dist/cjs/register.cjs"
+            }
         }
     },
     "sideEffects": [
-        "./dist/register.js",
-        "./dist/register.mjs"
+        "./dist/cjs/register.cjs",
+        "./dist/esm/register.mjs"
     ],
     "scripts": {
-        "build": "tsc && yarn esm:register && yarn esm:default",
-        "esm:register": "gen-esm-wrapper dist/register.js dist/register.mjs",
-        "esm:default": "gen-esm-wrapper dist/index.js dist/index.mjs"
+        "build": "tsup && yarn build:types",
+        "build:types": "concurrently \"yarn:build:types:*\"",
+        "build:types:cjs": "rollup-type-bundler -d dist/cjs",
+        "build:types:esm": "rollup-type-bundler -d dist/esm -t .mts",
+        "build:types:cleanup": "tsx ../../scripts/clean-register-imports.mts",
+        "typecheck": "tsc -b src"
     },
     "dependencies": {
         "cron": "^3.1.6"
     },
     "devDependencies": {
+        "@favware/rollup-type-bundler": "^3.2.1",
         "@types/node": "^20.10.4",
-        "gen-esm-wrapper": "^1.1.3",
+        "concurrently": "^8.2.2",
+        "tsup": "^8.0.1",
+        "tsx": "^4.6.2",
         "typescript": "^5.3.3"
     },
     "homepage": "https://github.com/Kings-World/sapphire-plugins",
