--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,7 +1,12 @@
 {
-    "extends": "@sapphire/ts-config",
+    "extends": [
+        "@sapphire/ts-config",
+        "@sapphire/ts-config/extra-strict",
+        "@sapphire/ts-config/verbatim",
+        "@sapphire/ts-config/bundler"
+    ],
     "compilerOptions": {
-        "importHelpers": true,
-        "noEmitHelpers": true
+        "noEmit": true,
+        "incremental": false
     }
 }
