chore: migrate to husky v9
Signed-off-by: Seren_Modz 21 <seren@kings-world.net>

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "build": "turbo run build",
         "typecheck": "turbo run typecheck",
         "prepublishOnly": "yarn build",
-        "postinstall": "is-ci || husky install"
+        "postinstall": "is-ci || husky"
     },
     "devDependencies": {
         "@commitlint/cli": "^18.4.3",
