--- a/packages/cron/package.json
+++ b/packages/cron/package.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "main": "dist/cjs/index.cjs",
     "module": "dist/esm/index.mjs",
-    "types": "dist/cjs/index.d.ts",
+    "types": "dist/cjs/index.d.cts",
     "exports": {
         ".": {
             "import": {
@@ -14,7 +14,7 @@
                 "default": "./dist/esm/index.mjs"
             },
             "require": {
-                "types": "./dist/cjs/index.d.ts",
+                "types": "./dist/cjs/index.d.cts",
                 "default": "./dist/cjs/index.cjs"
             }
         },
@@ -24,7 +24,7 @@
                 "default": "./dist/esm/register.mjs"
             },
             "require": {
-                "types": "./dist/cjs/register.d.ts",
+                "types": "./dist/cjs/register.d.cts",
                 "default": "./dist/cjs/register.cjs"
             }
         }
@@ -34,22 +34,23 @@
         "./dist/esm/register.mjs"
     ],
     "scripts": {
-        "build": "tsup && yarn build:types",
+        "build": "tsup && yarn build:types && yarn build:rename-cjs-register",
         "build:types": "concurrently \"yarn:build:types:*\"",
-        "build:types:cjs": "rollup-type-bundler -d dist/cjs",
+        "build:types:cjs": "rollup-type-bundler -d dist/cjs -ot .cts",
         "build:types:esm": "rollup-type-bundler -d dist/esm -t .mts",
         "build:types:cleanup": "tsx ../../scripts/clean-register-imports.mts",
+        "build:rename-cjs-register": "tsx ../../scripts/rename-cjs-register.mts",
         "typecheck": "tsc -b src"
     },
     "dependencies": {
         "cron": "^3.1.6"
     },
     "devDependencies": {
-        "@favware/rollup-type-bundler": "^3.2.1",
-        "@types/node": "^20.10.4",
+        "@favware/rollup-type-bundler": "^3.3.0",
+        "@types/node": "^20.11.6",
         "concurrently": "^8.2.2",
         "tsup": "^8.0.1",
-        "tsx": "^4.6.2",
+        "tsx": "^4.7.0",
         "typescript": "^5.3.3"
     },
     "homepage": "https://github.com/Kings-World/sapphire-plugins",
