fix: rimraf glob is now behind a flag
Signed-off-by: Seren_Modz 21 <seren@kings-world.net>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "packages/*"
     ],
     "scripts": {
-        "clean": "rimraf \"packages/**/dist\" \"packages/**/.turbo\"",
+        "clean": "rimraf --glob \"packages/**/dist\" \"packages/**/.turbo\"",
         "build": "turbo run build",
         "typecheck": "turbo run typecheck",
         "prepublishOnly": "yarn build",
