--- a/packages/cron/package.json
+++ b/packages/cron/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@kingsworld/plugin-cron",
     "description": "A simple @sapphire/framework plugin that aims to make use of the cron package and allow users to make cron jobs within their Sapphire discord bot.",
-    "version": "1.3.0",
+    "version": "1.4.0",
     "author": "Seren_Modz 21 <seren@kings-world.net>",
     "license": "MIT",
     "main": "dist/cjs/index.cjs",
@@ -44,6 +44,9 @@
     },
     "dependencies": {
         "cron": "^3.1.6"
+    },
+    "optionalDependencies": {
+        "@sentry/node": "^7.98.0"
     },
     "devDependencies": {
         "@favware/rollup-type-bundler": "^3.3.0",
