--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "clean": "rimraf --glob \"packages/**/dist\" \"packages/**/.turbo\"",
         "build": "turbo run build",
         "typecheck": "turbo run typecheck",
+        "format": "prettier -wu .",
         "prepublishOnly": "yarn build",
         "postinstall": "is-ci || husky"
     },
