--- a/package.json
+++ b/package.json
@@ -16,23 +16,23 @@
         "postinstall": "is-ci || husky"
     },
     "devDependencies": {
-        "@commitlint/cli": "^19.0.0",
-        "@commitlint/config-conventional": "^19.0.0",
-        "@sapphire/framework": "^5.0.7",
-        "@sapphire/pieces": "^4.2.2",
-        "@sapphire/ts-config": "^5.0.0",
-        "@types/node": "^20.11.6",
-        "discord.js": "^14.14.1",
-        "esbuild-plugin-file-path-extensions": "^2.0.0",
+        "@commitlint/cli": "^19.4.0",
+        "@commitlint/config-conventional": "^19.2.2",
+        "@sapphire/framework": "^5.2.1",
+        "@sapphire/pieces": "^4.3.1",
+        "@sapphire/ts-config": "^5.0.1",
+        "@types/node": "^20.16.1",
+        "discord.js": "^14.15.3",
+        "esbuild-plugin-file-path-extensions": "^2.1.2",
         "esbuild-plugin-version-injector": "^1.2.1",
-        "husky": "^9.0.6",
+        "husky": "^9.1.5",
         "is-ci": "^3.0.1",
-        "prettier": "^3.2.4",
+        "prettier": "^3.3.3",
         "pretty-quick": "^4.0.0",
-        "rimraf": "^6.0.0",
-        "tsup": "^8.0.1",
-        "turbo": "^2.0.0",
-        "typescript": "^5.3.3"
+        "rimraf": "^6.0.1",
+        "tsup": "^8.2.4",
+        "turbo": "^2.0.14",
+        "typescript": "~5.4.5"
     },
     "packageManager": "yarn@4.4.1"
 }
