--- a/packages/cron/package.json
+++ b/packages/cron/package.json
@@ -43,16 +43,16 @@
         "typecheck": "tsc -b src"
     },
     "dependencies": {
-        "cron": "^3.1.6"
+        "cron": "^3.1.7"
     },
     "devDependencies": {
         "@favware/rollup-type-bundler": "^3.3.0",
-        "@sentry/node": "^7.100.1",
-        "@types/node": "^20.11.6",
+        "@sentry/node": "^7.119.0",
+        "@types/node": "^20.16.1",
         "concurrently": "^8.2.2",
-        "tsup": "^8.0.1",
-        "tsx": "^4.7.0",
-        "typescript": "^5.3.3"
+        "tsup": "^8.2.4",
+        "tsx": "^4.18.0",
+        "typescript": "~5.4.5"
     },
     "homepage": "https://github.com/Kings-World/sapphire-plugins",
     "repository": {
