--- a/package.json
+++ b/package.json
@@ -1,38 +1,47 @@
 {
-    "name": "@kingsworld/sapphire-plugins",
-    "author": "Seren_Modz 21 <seren@kings-world.net>",
-    "repository": "github://Kings-World/sapphire-plugins",
-    "license": "MIT",
-    "private": true,
-    "workspaces": [
-        "packages/*"
-    ],
-    "scripts": {
-        "clean": "rimraf --glob \"packages/**/dist\" \"packages/**/.turbo\"",
-        "build": "turbo run build",
-        "typecheck": "turbo run typecheck",
-        "format": "prettier -wu .",
-        "prepublishOnly": "yarn build",
-        "postinstall": "is-ci || husky"
-    },
-    "devDependencies": {
-        "@commitlint/cli": "^19.4.1",
-        "@commitlint/config-conventional": "^19.4.1",
-        "@sapphire/framework": "^5.2.1",
-        "@sapphire/pieces": "^4.3.1",
-        "@sapphire/ts-config": "^5.0.1",
-        "@types/node": "^20.16.2",
-        "discord.js": "^14.15.3",
-        "esbuild-plugin-file-path-extensions": "^2.1.2",
-        "esbuild-plugin-version-injector": "^1.2.1",
-        "husky": "^9.1.5",
-        "is-ci": "^3.0.1",
-        "prettier": "^3.3.3",
-        "pretty-quick": "^4.0.0",
-        "rimraf": "^6.0.1",
-        "tsup": "^8.2.4",
-        "turbo": "^2.1.0",
-        "typescript": "~5.4.5"
-    },
-    "packageManager": "yarn@4.4.1"
+	"name": "@kingsworld/sapphire-plugins",
+	"author": "Seren_Modz 21 <seren@kings-world.net>",
+	"repository": "github://Kings-World/sapphire-plugins",
+	"license": "MIT",
+	"private": true,
+	"workspaces": [
+		"packages/*"
+	],
+	"scripts": {
+		"clean": "rimraf --glob \"packages/**/dist\" \"packages/**/.turbo\"",
+		"lint": "eslint packages --ext mjs,js,ts,tsx --fix",
+		"format": "prettier --write \"packages/**/{src,tests,scripts}/**/*.{mjs,ts,js}\"",
+		"build": "turbo run build",
+		"typecheck": "turbo run typecheck",
+		"prepublishOnly": "yarn build",
+		"postinstall": "is-ci || husky"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^19.4.1",
+		"@commitlint/config-conventional": "^19.4.1",
+		"@sapphire/eslint-config": "^5.0.5",
+		"@sapphire/framework": "^5.2.1",
+		"@sapphire/pieces": "^4.3.1",
+		"@sapphire/prettier-config": "^2.0.0",
+		"@sapphire/ts-config": "^5.0.1",
+		"@types/node": "^20.16.2",
+		"@typescript-eslint/eslint-plugin": "^7.13.1",
+		"@typescript-eslint/parser": "^7.13.1",
+		"discord.js": "^14.15.3",
+		"esbuild-plugin-file-path-extensions": "^2.1.2",
+		"esbuild-plugin-version-injector": "^1.2.1",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.2.1",
+		"husky": "^9.1.5",
+		"is-ci": "^3.0.1",
+		"prettier": "^3.3.3",
+		"pretty-quick": "^4.0.0",
+		"rimraf": "^6.0.1",
+		"tsup": "^8.2.4",
+		"turbo": "^2.1.0",
+		"typescript": "~5.4.5"
+	},
+	"prettier": "@sapphire/prettier-config",
+	"packageManager": "yarn@4.4.1"
 }
