--- a/package.json
+++ b/package.json
@@ -28,19 +28,32 @@
 		"@typescript-eslint/eslint-plugin": "^7.13.1",
 		"@typescript-eslint/parser": "^7.13.1",
 		"discord.js": "^14.15.3",
+		"cz-conventional-changelog": "^3.3.0",
 		"esbuild-plugin-file-path-extensions": "^2.1.2",
 		"esbuild-plugin-version-injector": "^1.2.1",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
-		"husky": "^9.1.5",
-		"is-ci": "^3.0.1",
+		"lint-staged": "^15.2.9",
 		"prettier": "^3.3.3",
-		"pretty-quick": "^4.0.0",
 		"rimraf": "^6.0.1",
 		"tsup": "^8.2.4",
 		"turbo": "^2.1.0",
 		"typescript": "~5.4.5"
+	},
+	"commitlint": {
+		"extends": [
+			"@commitlint/config-conventional"
+		]
+	},
+	"lint-staged": {
+		"*": "prettier --ignore-unknown --write",
+		"*.{mjs,js,ts}": "eslint --fix --ext mjs,js,ts"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
 	},
 	"prettier": "@sapphire/prettier-config",
 	"packageManager": "yarn@4.4.1"
