refactor: update and remove files
Signed-off-by: Seren_Modz 21 <seren@kings-world.net>

--- a/packages/cron/package.json
+++ b/packages/cron/package.json
@@ -40,7 +40,8 @@
         "build:types:esm": "rollup-type-bundler -d dist/esm -t .mts",
         "build:types:cleanup": "tsx ../../scripts/clean-register-imports.mts",
         "build:rename-cjs-register": "tsx ../../scripts/rename-cjs-register.mts",
-        "typecheck": "tsc -b src"
+        "typecheck": "tsc -b src",
+        "prepack": "yarn build"
     },
     "dependencies": {
         "cron": "^3.1.7"
