--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
 		"lint": "eslint packages --ext mjs,js,ts,tsx --fix",
 		"format": "prettier --write \"packages/**/{src,tests,scripts}/**/*.{mjs,ts,js}\"",
 		"build": "turbo run build",
-		"typecheck": "turbo run typecheck",
-		"prepublishOnly": "yarn build",
-		"postinstall": "is-ci || husky"
+		"typecheck": "turbo run typecheck"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.4.1",
