--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,18 @@
 		"typecheck": {
 			"dependsOn": [],
 			"outputs": []
+		},
+		"lint": {
+			"dependsOn": [],
+			"outputs": []
+		},
+		"bump": {
+			"dependsOn": [],
+			"outputs": ["CHANGELOG.md"]
+		},
+		"check-update": {
+			"dependsOn": [],
+			"outputs": []
 		}
 	}
 }
