--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,14 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": ["local>Kings-World/.github:renovate-config"]
+	"extends": ["local>Kings-World/.github:renovate-config"],
+	"packageRules": [
+		{
+			"matchDepTypes": ["engines"],
+			"enabled": false
+		},
+		{
+			"matchPackagePatterns": ["typescript"],
+			"enabled": false
+		}
+	]
 }
