ci(auto-deprecate): fix script name
Signed-off-by: Seren_Modz 21 <seren@kings-world.net>

--- a/.github/workflows/auto-deprecate.yml
+++ b/.github/workflows/auto-deprecate.yml
@@ -24,6 +24,6 @@ jobs:
         run: yarn install --immutable
 
       - name: Run NPM Auto Deprecate
-        run: yarn auto-deprecate
+        run: yarn npm-deprecate
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
