--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,10 +4,13 @@ on:
   workflow_dispatch:
     inputs:
       package:
-        description: The package to release, this should be the path segment after packages/, without the @kingsworld/ prefix
+        description: The package to release
         required: true
+        type: choice
+        options:
+          - cron
       skip-automatic-bump:
-        description: Whether to skip the automatic bumping of the packageversion
+        description: Whether to skip the automatic bumping of the package version
         required: false
         default: false
         type: boolean
