--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,6 +40,7 @@ jobs:
         with:
           app-id: ${{ secrets.KINGS_WORLD_APP_ID }}
           private-key: ${{ secrets.KINGS_WORLD_PRIVATE_KEY }}
+          owner: ${{ github.repository_owner }}
 
       - name: Checkout Project
         uses: actions/checkout@v4
