--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,14 +33,22 @@ jobs:
     name: Publish @kingsworld/${{ inputs.package }}
     runs-on: ubuntu-latest
     if: github.repository_owner == 'Kings-World'
-    permissions:
-      contents: write
     steps:
+      - name: Generate Access Token
+        id: app-token
+        uses: actions/create-github-app-token@v1
+        with:
+          app-id: ${{ secrets.KINGS_WORLD_APP_ID }}
+          private-key: ${{ secrets.KINGS_WORLD_PRIVATE_KEY }}
+          owner: ${{ github.repository_owner }}
+
       - name: Checkout Project
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           ref: main
+          persist-credentials: false
+          token: ${{ steps.app-token.outputs.token }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -52,7 +60,6 @@ jobs:
 
       - name: Configure Git
         run: |
-          git remote set-url origin "https://${GITHUB_TOKEN}:x-oauth-basic@github.com/${GITHUB_REPOSITORY}.git"
           git config --local user.email "${GITHUB_EMAIL}"
           git config --local user.name "${GITHUB_USER}"
         env:
