ci(publish): remove the env vars for git configuration
Signed-off-by: Seren_Modz 21 <seren@kings-world.net>

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,12 +60,8 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config --local user.email "${GITHUB_EMAIL}"
-          git config --local user.name "${GITHUB_USER}"
-        env:
-          GITHUB_USER: github-actions[bot]
-          GITHUB_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
 
       - name: Build Package
         if: ${{ inputs.build }}
