--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,8 +60,11 @@ jobs:
 
       - name: Configure Git
         run: |
+          git remote set-url origin "https://oauth2:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Package
         if: ${{ inputs.build }}
