feat: format luxon timezones to their tz identifier (#49)
Signed-off-by: Seren_Modz 21 <seren@kings-world.net>

--- a/packages/cron/package.json
+++ b/packages/cron/package.json
@@ -52,6 +52,7 @@
 		"@favware/cliff-jumper": "^4.1.0",
 		"@favware/rollup-type-bundler": "^3.3.0",
 		"@sentry/node": "^8.32.0",
+		"@types/luxon": "^3.4.2",
 		"@types/node": "^20.16.10",
 		"concurrently": "^9.0.1",
 		"tsup": "^8.3.0",
