chore: update cliff jumper config
Signed-off-by: Seren_Modz 21 <seren@kings-world.net>

--- a/packages/cron/.cliff-jumperrc.yml
+++ b/packages/cron/.cliff-jumperrc.yml
@@ -6,4 +6,5 @@ identifierBase: false
 pushTag: true
 githubRelease: true
 githubReleaseLatest: true
-githubRepo: Kings-World/sapphire-plugins
+gitRepo: Kings-World/sapphire-plugins
+gitHostVariant: github
