--- a/packages/cron/package.json
+++ b/packages/cron/package.json
@@ -36,7 +36,7 @@
 	"scripts": {
 		"build": "tsup && yarn build:types && yarn build:rename-cjs-register",
 		"build:types": "concurrently \"yarn:build:types:*\"",
-		"build:types:cjs": "rollup-type-bundler -d dist/cjs -ot .cts",
+		"build:types:cjs": "rollup-type-bundler -d dist/cjs --output-typings-file-extension .cts",
 		"build:types:esm": "rollup-type-bundler -d dist/esm -t .mts",
 		"build:types:cleanup": "tsx ../../scripts/clean-register-imports.mts",
 		"build:rename-cjs-register": "tsx ../../scripts/rename-cjs-register.mts",
