--- a/packages/cron/package.json
+++ b/packages/cron/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kingsworld/plugin-cron",
 	"description": "A simple @sapphire/framework plugin that aims to make use of the cron package and allow users to make cron jobs within their Sapphire discord bot.",
-	"version": "2.1.1",
+	"version": "3.0.1",
 	"author": "Seren_Modz 21 <seren@kings-world.net>",
 	"license": "MIT",
 	"main": "dist/cjs/index.cjs",
@@ -46,13 +46,12 @@
 		"check-update": "cliff-jumper --dry-run"
 	},
 	"dependencies": {
-		"cron": "^4.1.3"
+		"croner": "^9.0.0"
 	},
 	"devDependencies": {
 		"@favware/cliff-jumper": "^6.0.0",
 		"@favware/rollup-type-bundler": "^4.0.0",
 		"@sentry/node": "^9.11.0",
-		"@types/luxon": "^3.6.2",
 		"@types/node": "^22.14.0",
 		"concurrently": "^9.1.2",
 		"tsup": "^8.4.0",
