--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -24,6 +24,8 @@ jobs:
     name: Publish Next to NPM
     runs-on: ubuntu-latest
     if: github.repository_owner == 'Kings-World'
+    permissions:
+      id-token: write
     strategy:
       fail-fast: false
       matrix:
