ci: prevent expression injection with pr title
Signed-off-by: Seren_Modz 21 <seren@kings-world.net>

--- a/.github/workflows/pr-linting.yml
+++ b/.github/workflows/pr-linting.yml
@@ -25,4 +25,6 @@ jobs:
         run: yarn --immutable
 
       - name: Run Validation
-        run: echo "${{ github.event.pull_request.title }}" | yarn commitlint
+        run: echo "$PR_TITLE" | yarn commitlint
+        env:
+          PR_TITLE: ${{ github.event.pull_request.title}}
