--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"rimraf": "^6.0.1",
 		"tsup": "^8.5.0",
 		"turbo": "^2.5.3",
-		"typescript": "~5.4.5"
+		"typescript": "^5.8.3"
 	},
 	"commitlint": {
 		"extends": [
