--- a/packages/cron/package.json
+++ b/packages/cron/package.json
@@ -56,7 +56,7 @@
 		"concurrently": "^9.1.2",
 		"tsup": "^8.5.0",
 		"tsx": "^4.19.4",
-		"typescript": "~5.4.5"
+		"typescript": "^5.8.3"
 	},
 	"homepage": "https://github.com/Kings-World/sapphire-plugins",
 	"repository": {
