--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -1,35 +1,35 @@
 # default labels
 - name: bug
-  color: d73a4a
+  color: 'd73a4a'
   description: Something isn't working
 - name: dependencies
-  color: ededed
+  color: 'ededed'
 - name: documentation
-  color: 0075ca
+  color: '0075ca'
   description: Improvements or additions to documentation
 - name: duplicate
-  color: cfd3d7
+  color: 'cfd3d7'
   description: This issue or pull request already exists
 - name: enhancement
-  color: a2eeef
+  color: 'a2eeef'
   description: New feature or request
 - name: good first issue
-  color: 7057ff
+  color: '7057ff'
   description: Good for newcomers
 - name: help wanted
   color: '008672'
   description: Extra attention is needed
 - name: invalid
-  color: e4e669
+  color: 'e4e669'
   description: This doesn't seem right
 - name: question
-  color: d876e3
+  color: 'd876e3'
   description: Further information is requested
 - name: wontfix
-  color: ffffff
+  color: 'ffffff'
   description: This will not be worked on
 
 # custom labels
 - name: packages:cron
-  color: fbca04
+  color: 'fbca04'
   description: Anything that has relation to the Cron plugin
