ci(labels): add empty description for deps label
Signed-off-by: Seren_Modz 21 <seren@kings-world.net>

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -3,6 +3,7 @@
   color: 'd73a4a'
   description: Something isn't working
 - name: dependencies
+  description: ''
   color: 'ededed'
 - name: documentation
   color: '0075ca'
