ci(labels): update cron package label description
Signed-off-by: Seren_Modz 21 <seren@kings-world.net>

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -33,4 +33,4 @@
 # custom labels
 - name: packages:cron
   color: 'fbca04'
-  description: Anything that has relation to the Cron plugin
+  description: '@kingsworld/plugin-cron'
