--- a/.github/workflows/pr-triage.yml
+++ b/.github/workflows/pr-triage.yml
@@ -1,4 +1,4 @@
-name: PR Linting
+name: PR Triage
 
 on:
   pull_request_target:
@@ -28,3 +28,15 @@ jobs:
         run: echo "$PR_TITLE" | yarn commitlint
         env:
           PR_TITLE: ${{ github.event.pull_request.title }}
+
+  labeler:
+    name: Labeler
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+    steps:
+      - name: Apply Labels to PR
+        uses: actions/labeler@v5
+        with:
+          sync-labels: true
