ci: set workflow permissions
Signed-off-by: Seren_Modz 21 <seren@kings-world.net>

--- a/.github/workflows/pr-triage.yml
+++ b/.github/workflows/pr-triage.yml
@@ -12,6 +12,8 @@ jobs:
   title:
     name: Title Validation
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout Project
         uses: actions/checkout@v4
